--- a/docker/staging/docker-compose.yml
+++ b/docker/staging/docker-compose.yml
@@ -2,6 +2,11 @@ services:
   wordpress:
     image: wordpress
     restart: always
+    environment:
+      WORDPRESS_DB_HOST: db
+      WORDPRESS_DB_USER: ${WORDPRESS_DB_USER}
+      WORDPRESS_DB_PASSWORD: ${WORDPRESS_DB_PASSWORD}
+      WORDPRESS_DB_NAME: ${WORDPRESS_DB_NAME}
     ports:
       - 8080:80
     volumes:
@@ -10,6 +15,11 @@ services:
   db:
     image: mysql:8.0
     restart: always
+    environment:
+      MYSQL_DATABASE: ${WORDPRESS_DB_NAME}
+      MYSQL_USER: ${WORDPRESS_DB_USER}
+      MYSQL_PASSWORD: ${WORDPRESS_DB_PASSWORD}
+      MYSQL_RANDOM_ROOT_PASSWORD: '1'
     volumes:
       - ./db:/var/lib/mysql
 
