--- a/docker/staging/docker-compose.yml
+++ b/docker/staging/docker-compose.yml
@@ -43,3 +43,14 @@ services:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+
+  turn:
+    image: coturn/coturn
+    restart: always
+    ports:
+      - "3478:3478"
+      - "3478:3478/udp"
+      - "3479:3479"
+      - "3479:3479/udp"
+    volumes:
+      - ./coturn/turnserver.conf:/etc/turnserver.conf:ro
