--- a/docker/staging/docker-compose.yml
+++ b/docker/staging/docker-compose.yml
@@ -1,16 +1,18 @@
 services:
-  wordpress:
-    image: wordpress
+  fpm:
+    build:
+      dockerfile: fpm_dockerfile
     restart: always
+    ports:
+        - ":9000"
     environment:
       WORDPRESS_DB_HOST: db
       WORDPRESS_DB_USER: ${WORDPRESS_DB_USER}
       WORDPRESS_DB_PASSWORD: ${WORDPRESS_DB_PASSWORD}
       WORDPRESS_DB_NAME: ${WORDPRESS_DB_NAME}
-    ports:
-      - 8080:80
+
     volumes:
-      - ./wordpress:/var/www/html
+        - ./wordpress:/var/www/html
 
   db:
     image: mysql:8.0
@@ -29,13 +31,18 @@ services:
     environment:
       - NGINX_HOST=ai4fin.tech
       - NGINX_PORT=80
+    ports:
+      - 80:80
+      - 443:443
     restart: always
     volumes:
       - ./sites-enabled/:/etc/nginx/sites-enabled
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
+      - ./wordpress:/var/www/html
     command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
-    network_mode: host
+    depends_on:
+      - fpm
 
   certbot:
     image: certbot/certbot
