--- a/docker/staging/coturn/turnserver.conf
+++ b/docker/staging/coturn/turnserver.conf
@@ -1,9 +1,9 @@
 listening-port=3478
 #tls-listening-port=5349
 
-listening-ip=3.20.59.237
-relay-ip=3.20.59.237
-external-ip=3.20.59.237
+listening-ip=10.0.2.4
+relay-ip=10.0.2.4
+external-ip=3.20.59.237/10.0.2.4
 
 realm=ai4fin.tech
 server-name=ai4fin.tech
