added network host to turn

--- a/docker/staging/docker-compose.yml
+++ b/docker/staging/docker-compose.yml
@@ -61,4 +61,4 @@ services:
       - "3479:3479/udp"
     volumes:
       - ./coturn/turnserver.conf:/etc/turnserver.conf:ro
-    network: 'host'
+    network_mode: "host"
