--- a/docker/staging/docker-compose.yml
+++ b/docker/staging/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
       - ./wordpress:/var/www/html
-    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s --with-http_sub_module reload; done & nginx -g \"daemon off;\"'"
     depends_on:
       - fpm
 
